# livetranslation_rust

./: .env  Cargo.toml  README.md  mysignaturee.txt
src/: main.rs
static/: index.html  pcm-worklet.js  view.html
